--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Jingyan Xu's webpage
 logo: /assets/img/Capture.PNG
-description: Jingyan Xu's webpage
-show_downloads: true
+description: []
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
